# br-mcp-server

./: .dockerignore  .env.example  .gitignore  .python-version  Dockerfile  README.md  client.py  pyproject.toml  server.py
.github/workflows/: main_br-mcp-server-app.yml  main_br-mcp-server.-app.yml
auth/: provider.py
business_request/: br_fields.py  br_models.py  br_prompts.py  br_utils.py  database.py
