[project]
name = "bits-mcp-server"
version = "0.1.0"
description = "Sample MCP server PoC for testing (BITS mockup)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "azure-identity>=1.25.3",
    "fastmcp>=3.1.0",
    "mcp[cli]>=1.26.0",
    "openai>=1.81.0",
    "pandas>=2.2.3",
    "pyodbc>=5.1.0",
    "ruff>=0.11.8",
    "starlette>=0.50.0",
    "uvicorn>=0.38.0",
]

# uncomment to build on a system that doesn't support this lib natively.
#[tool.uv]
#no-binary-package = ["pymssql"]

[tool.setuptools.packages.find]
include = ["auth", "business_request"]
